# macoptima

./: .gitignore  README.md  application_storage_analyzer.py  cache_storage_analyzer.py  main.py  pyproject.toml  run_analyzer.py
src/apps/: __init__.py  chrome.py
