[project]
name = "macoptima"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module level import not at top (needed for dynamic imports)
    "SIM105", # use contextlib.suppress (prefer explicit try-except)
    "SIM108", # use ternary operator (prefer explicit if-else for readability)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
